fixed map spacingg

--- a/hackathon2017/style.scss
+++ b/hackathon2017/style.scss
@@ -62,7 +62,7 @@ input[type="text"]{
 }
 #container{
   border: 3px solid grey;
-  height: 1100px;
+  height: 900px;
 }
 #top-info{
   height: 200px;
@@ -92,7 +92,7 @@ input[type="text"]{
   background-image: url(images/map-pic.png);
   background-repeat: no-repeat;
   background-size:cover;
-  height: 900px;
+  height: 850px;
   position:relative;
 }
 .option{
